# git-ranger

./: .gitignore  AI_GUIDANCE.md  Cargo.toml  ENV_CONFIG.md  IMPLEMENTATION.md  README.md  SECURITY_IMPLEMENTATION.md  build-release.ps1
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs
src/commands/: init.rs  ls.rs  mod.rs  status.rs  sync.rs
src/providers/: gitlab.rs
tests/: config_tests.rs  gitlab_tests.rs  init_tests.rs  ls_tests.rs  status_tests.rs  sync_tests.rs
